<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AdHocManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="initialize_button">Initialize</string>
    <string name="bluetooth">Bluetooh</string>
    <string name="exit_button">Exit</string>
    <string name="start_network">Start Network</string>
    <string name="find_devices">Find Devices</string>
    <string name="search">Search</string>
    <string name="connect">Connect</string>
    <string name="send">Send</string>
    <string name="discoverable">Discoverable</string>
    <string name="test_2">Test 2</string>
    <string name="test_3">Test 3</string>
    <string name="test_1">Test 1</string>
    <string name="discover_devices">Discover devices</string>
    <string name="device_discovery">Device discovery</string>
    <string name="make_discoverable">Make discoverable</string>
    <string name="list_devices">List Devices</string>
    <string name="manage_node">Manage node</string>
    <string name="disconnect">Disconnect</string>
    <string name="ad_hoc_manager">AdHoc Manager</string>
    <string name="spam">Spam</string>
    <string name="search_stop">Stop Searching</string>
    <string name="cancel">Cancel</string>

</resources>
