<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/ad_hoc_manager"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/main_discovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_devices" />

        <Button
            android:id="@+id/main_list_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_devices" />

        <Button
            android:id="@+id/main_exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_button" />
    </LinearLayout>

</ScrollView>