<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/device_discovery"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/discover_make_discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/make_discoverable" />

        <Button
            android:id="@+id/discover_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />

    </LinearLayout>

</ScrollView>